k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: seasonal-wardrobe
  labels:
    name: seasonal-wardrobe
    environment: production
